<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusedByDefault="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/back_btn"
        android:textAlignment="center"
        android:textSize="34sp"
        android:onClick="onClickBackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide_btn"
        app:layout_constraintVertical_bias="0.298" />

    <Button
        android:id="@+id/no8_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginTop="185dp"
        android:layout_marginBottom="33dp"
        android:onClick="onClickNumButton"
        android:text="@string/No8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no5_btn"
        app:layout_constraintEnd_toStartOf="@+id/no9_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no7_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/divide_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="152dp"
        android:onClick="onClickOpButton"
        android:text="@string/divide_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/equals_btn"
        app:layout_constraintTop_toBottomOf="@+id/multiply_btn" />

    <Button
        android:id="@+id/no6_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickNumButton"
        android:text="@string/No6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no3_btn"
        app:layout_constraintEnd_toStartOf="@+id/subtract_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no5_btn"
        app:layout_constraintTop_toBottomOf="@+id/no9_btn" />

    <Button
        android:id="@+id/equals_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="152dp"
        android:onClick="onCLickEquationButton"
        android:text="@string/equals_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divide_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no0_btn"
        app:layout_constraintTop_toBottomOf="@+id/no3_btn" />

    <Button
        android:id="@+id/multiply_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:onClick="onClickOpButton"
        android:text="@string/multiply_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divide_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no3_btn"
        app:layout_constraintTop_toBottomOf="@+id/subtract_btn" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="152dp"
        android:onClick="onClickClearButton"
        android:text="@string/clear_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/no0_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no1_btn" />

    <Button
        android:id="@+id/no7_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginTop="185dp"
        android:layout_marginBottom="33dp"
        android:onClick="onClickNumButton"
        android:text="@string/No7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no4_btn"
        app:layout_constraintEnd_toStartOf="@+id/no8_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginTop="185dp"
        android:layout_marginBottom="33dp"
        android:onClick="onClickOpButton"
        android:text="@string/add_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/subtract_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no9_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subtract_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickOpButton"
        android:text="@string/subtract_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/multiply_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no6_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <Button
        android:id="@+id/no5_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickNumButton"
        android:text="@string/No5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no2_btn"
        app:layout_constraintEnd_toStartOf="@+id/no6_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no4_btn"
        app:layout_constraintTop_toBottomOf="@+id/no8_btn" />

    <Button
        android:id="@+id/no1_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:onClick="onClickNumButton"
        android:text="@string/No1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_btn"
        app:layout_constraintEnd_toStartOf="@+id/no2_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no4_btn" />

    <Button
        android:id="@+id/no2_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:onClick="onClickNumButton"
        android:text="@string/No2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no0_btn"
        app:layout_constraintEnd_toStartOf="@+id/no3_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no1_btn"
        app:layout_constraintTop_toBottomOf="@+id/no5_btn" />

    <Button
        android:id="@+id/no0_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="152dp"
        android:onClick="onClickNumButton"
        android:text="@string/NoZero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_btn"
        app:layout_constraintTop_toBottomOf="@+id/no2_btn" />

    <Button
        android:id="@+id/no3_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:onClick="onClickNumButton"
        android:text="@string/No3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/equals_btn"
        app:layout_constraintEnd_toStartOf="@+id/multiply_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no2_btn"
        app:layout_constraintTop_toBottomOf="@+id/no6_btn" />

    <Button
        android:id="@+id/no4_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickNumButton"
        android:text="@string/No4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no1_btn"
        app:layout_constraintEnd_toStartOf="@+id/no5_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no7_btn" />

    <Button
        android:id="@+id/no9_btn"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginTop="185dp"
        android:layout_marginBottom="33dp"
        android:onClick="onClickNumButton"
        android:text="@string/No9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no6_btn"
        app:layout_constraintEnd_toStartOf="@+id/add_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no8_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numInput1"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="62dp"
        android:clickable="false"
        android:defaultFocusHighlightEnabled="true"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/no8_btn"
        app:layout_constraintEnd_toStartOf="@+id/opText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numInput2"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="62dp"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/opText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/add_btn"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/numInput2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numInput1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ansText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/no8_btn"
        app:layout_constraintEnd_toStartOf="@+id/numInput2"
        app:layout_constraintStart_toEndOf="@+id/numInput1"
        app:layout_constraintTop_toBottomOf="@+id/opText"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>



